compiler/testData/diagnostics/tests/redeclarations/shadowedExtension/extensionFunShadowedBySynthesizedMemberFun.kt
// !DIAGNOSTICS: -UNUSED_PARAMETER

data class DataClass(val x: Int)

fun DataClass.<!EXTENSION_SHADOWED_BY_MEMBER!>component1<!>() = 42